--- a/styles/styles.css
+++ b/styles/styles.css
@@ -6,3 +6,75 @@
   font-weight: 400;
   font-style: normal;
 }
+/* shared styles */
+.display-flex {
+  display: flex;
+}
+/* dark-02 */
+.text-gray {
+  color: #424242;
+}
+/* dark-03 */
+.text-ligth-gray {
+  color: #727272;
+}
+.bg-light {
+  background-color: rgba(255, 144, 14, 0.1);
+}
+.btn-primary {
+  background-color: rgba(255, 144, 14, 1);
+  color: rgba(255, 255, 255, 1);
+  padding: 20px 25px;
+  font-size: 1.25rem;
+  font-weight: 600;
+  border-radius: 8px;
+  border: none;
+}
+/* nav-bar related styles */
+.nav-bar {
+  justify-content: space-between;
+  align-items: center;
+}
+.band {
+  font-weight: 700;
+  font-size: 3rem;
+}
+
+.nav-item {
+  list-style: none;
+  margin-right: 30px;
+}
+.nav-link {
+  text-decoration: none;
+  font-weight: 500px;
+}
+.nav-bar,
+.banner {
+  max-width: 1440px;
+  margin: 0 auto;
+}
+
+/* banner-styles */
+.banner-content {
+  max-width: 850px;
+  margin: 0 auto;
+  text-align: center;
+  margin-bottom: 50px;
+}
+.banner-title {
+  font-weight: 700;
+  font-size: 4rem;
+}
+.banner-image {
+  width: 100%;
+}
+/* responsive style for header */
+@media screen and (max-width: 576px) {
+  .nav-bar,
+  .nav-links {
+    flex-direction: column;
+  }
+  .nav-links {
+    margin-bottom: 5px;
+  }
+}
