--- a/styles/styles.css
+++ b/styles/styles.css
@@ -10,6 +10,9 @@
 .display-flex {
   display: flex;
 }
+.text-primary {
+  color: rgba(255, 144, 14, 1);
+}
 /* dark-02 */
 .text-gray {
   color: #424242;
@@ -29,6 +32,13 @@
   font-weight: 600;
   border-radius: 8px;
   border: none;
+}
+main {
+  max-width: 1440px;
+  margin: 0 auto;
+}
+main > section {
+  margin-top: 130px;
 }
 /* nav-bar related styles */
 .nav-bar {
@@ -68,13 +78,49 @@
 .banner-image {
   width: 100%;
 }
+/* team and feature related styles */
+.teams {
+  align-items: center;
+}
+.team-img-container {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 24px;
+}
+.our-features {
+  margin-left: 130px;
+  max-width: 530px;
+}
+.feature-title {
+  font-size: 2.8rem;
+  font-weight: 700;
+}
+#Quick-list {
+  font-weight: 500;
+}
 /* responsive style for header */
 @media screen and (max-width: 576px) {
   .nav-bar,
-  .nav-links {
+  .nav-links,
+  .teams {
     flex-direction: column;
   }
   .nav-links {
     margin-bottom: 5px;
+  }
+  .team-img-container {
+    grid-template-columns: repeat(1, 1fr);
+  }
+  .our-features {
+    margin-left: 20px;
+  }
+}
+/* medium-size */
+@media screen and (min-width: 576px) and (max-width: 992px) {
+  .teams {
+    flex-direction: column;
+  }
+  .our-features {
+    margin-left: 50px auto;
   }
 }
