--- a/styles/styles.css
+++ b/styles/styles.css
@@ -33,6 +33,10 @@
   border-radius: 8px;
   border: none;
 }
+.section-title {
+  font-size: 2.8rem;
+  font-weight: 700;
+}
 main {
   max-width: 1440px;
   margin: 0 auto;
@@ -91,12 +95,26 @@ main > section {
   margin-left: 130px;
   max-width: 530px;
 }
-.feature-title {
-  font-size: 2.8rem;
-  font-weight: 700;
-}
+
 #Quick-list {
   font-weight: 500;
+}
+/* some facts related styles */
+.fact-card {
+  border: 1px solid rgba(255, 144, 14, 1);
+  width: 240px;
+  height: 240px;
+  border-radius: 8px;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+.facts-container {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+}
+.facts-description {
+  max-width: 540px;
 }
 /* responsive style for header */
 @media screen and (max-width: 576px) {
@@ -114,6 +132,17 @@ main > section {
   .our-features {
     margin-left: 20px;
   }
+}
+.fact-number {
+  font-size: 2.8rem;
+  font-weight: 600;
+  margin-top: 5px;
+  margin-bottom: 10px;
+}
+.fact-name {
+  font-size: 1.25rem;
+  font-weight: 600;
+  margin-top: 10px;
 }
 /* medium-size */
 @media screen and (min-width: 576px) and (max-width: 992px) {
