--- a/styles/styles.css
+++ b/styles/styles.css
@@ -99,6 +99,41 @@ main > section {
 #Quick-list {
   font-weight: 500;
 }
+/* features section related styles */
+.features-2 {
+  gap: 140px;
+}
+#feature-section-title {
+  border-left: 5px solid rgba(255, 144, 14, 1);
+  padding-left: 21px;
+}
+.feature-card {
+  gap: 30px;
+  padding: 30px;
+  box-shadow: 0 4px 30px 0 rgba(0, 0, 0, 0.06);
+  margin-bottom: 20px;
+  border-radius: 8px;
+}
+.feature-card .feature-title {
+  font-weight: 600;
+  font-size: 1.25rem;
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
+.featured-architech img {
+  width: 100%;
+}
+#expericnce-badge {
+  padding: 45px 43px;
+  font-size: 1.5rem;
+  font-weight: 500;
+  margin-left: -100px;
+  margin-top: -77px;
+}
+#expericnce-year {
+  font-size: 4rem;
+  font-weight: 700;
+}
 /* some facts related styles */
 .fact-card {
   border: 1px solid rgba(255, 144, 14, 1);
@@ -144,7 +179,8 @@ main > section {
 @media screen and (max-width: 576px) {
   .nav-bar,
   .nav-links,
-  .teams {
+  .teams,
+  .features-2 {
     flex-direction: column;
   }
   .nav-links {
@@ -164,6 +200,10 @@ main > section {
     gap: 50px;
   }
   .our-features {
+    margin-left: 20px;
+  }
+  #expericnce-badge {
+    margin-top: 20px;
     margin-left: 20px;
   }
 }
